mobile overflow fix

--- a/style.css
+++ b/style.css
@@ -415,6 +415,10 @@ article div:nth-of-type(2) {
  }
 
  @media only screen and (max-width: 650px) {
+    body{
+        overflow-x: hidden;
+    }
+
     h1{
         font-size: 1.4rem !important;
     }
